--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 ---
 layout: default
 title: i7m.org
+categories:
+  - sldabroad
+  - sldcode
 ---
 
-<div id="home">
-  <h1>My Blogs</h1>
-  <ul class="posts">
-    <li><a href="/sldabroad">sld abroad</li>
-  </ul>
-</div>
+<table class="categories">
+<tr>
+{% for category in page.categories %}
+  <th>
+    <h1>{{ category }}</h1>
+  </th>
+{% endfor %}
+</tr>
+<tr>
+{% for category in page.categories %}
+  <td>
+    <ul class="posts">
+    {% for post in site.posts %}
+      {% if post.categories contains category %}
+        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endif %}
+    {% endfor %}
+    </ul>
+  </td>
+{% endfor %}
+</tr>
+</table>
