--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@ categories:
 <table class="categories">
 <tr>
 {% for category in page.categories %}
-  <th>
-    <h1>{{ category }}</h1>
-  </th>
+  <th><h2>{{ category }}</h2></th>
 {% endfor %}
 </tr>
 <tr>
