Change images to be self-hosted.

--- a/_posts/sldcode/2012-12-20-do-you-have-idea.html
+++ b/_posts/sldcode/2012-12-20-do-you-have-idea.html
@@ -38,9 +38,9 @@ title: Do you have IDEA?
 
 <p>Do you have tests? Probably, and if not you will probably have in the future. IDEA employs a very simple concept: all source that is marked "test source" should be coloured green in editor tabs. From IDEA 12 project viewer also has nice background highlighting.</p>
 
-<div class="separator" style="clear: both; text-align: center;">
-<a href="http://3.bp.blogspot.com/-c5crn3-LB_I/UNL24tdg_MI/AAAAAAAABH8/IWmzqH3ATiQ/s1600/idea12-test-colouring.PNG" imageanchor="1" style="margin-left:1em; margin-right:1em"><img border="0" height="68" width="480" src="http://3.bp.blogspot.com/-c5crn3-LB_I/UNL24tdg_MI/AAAAAAAABH8/IWmzqH3ATiQ/s480/idea12-test-colouring.PNG" /></a>
-</div>
+<p class="separator" style="clear: both; text-align: center;">
+  <img border="0" src="/images/sldcode/idea12-test-colouring.png" style="width: 90%;" />
+</p>
 
 <p>Naturally this makes navigating between editor tabs quicker and navigating between source folders less confusing. I had a few mishaps dragging classes to the test sources instead of normal sources and vice versa. No more of that.</p>
 
@@ -49,11 +49,15 @@ title: Do you have IDEA?
 
 <p>Did you ever frown over the boilerplate of one anonymous class to specify one line of real code? Well, Java&nbsp;8 will solve that, but until that IDEA can collapse such code to omit the "useless" parts:</p>
 
-<div class="separator" style="clear: both; text-align: center;">
-<a href="http://2.bp.blogspot.com/-5R1Vf48ILK0/UNL-hSu8DVI/AAAAAAAABIU/JHvsTjH-muA/s1600/idea-anon-base.png" imageanchor="1" style="margin-left:1em; margin-right:1em"><img border="0" src="http://2.bp.blogspot.com/-5R1Vf48ILK0/UNL-hSu8DVI/AAAAAAAABIU/JHvsTjH-muA/s1600/idea-anon-base.png" /></a></div>
+<p class="separator" style="clear: both; text-align: center;">
+  <img border="0" src="/images/sldcode/idea-anon-base.png" />
+</p>
 
-<div class="separator" style="clear: both; text-align: center;">
-<a href="http://2.bp.blogspot.com/-Svv7MpvN6YY/UNL-htYjX1I/AAAAAAAABIg/QdH3lo9VPto/s1600/idea-anon-hover.png" imageanchor="1" style="margin-left:1em; margin-right:1em"><img border="0" src="http://2.bp.blogspot.com/-Svv7MpvN6YY/UNL-htYjX1I/AAAAAAAABIg/QdH3lo9VPto/s1600/idea-anon-hover.png" /></a></div>
+<p>You can hover over the collapsed part to see the whole definition:</p>
+
+<p class="separator" style="clear: both; text-align: center;">
+  <img border="0" src="/images/sldcode/idea-anon-hover.png" />
+</p>
 
 <p>Again this is a readability feature which I think is brilliant.</p>
 
