Re-create missing gist.

--- a/_posts/sldcode/2012-12-20-do-you-have-idea.html
+++ b/_posts/sldcode/2012-12-20-do-you-have-idea.html
@@ -86,7 +86,7 @@ title: Do you have IDEA?
 <h4 class="good">No absolute paths, simple readable one module description XML.</h4>
 
 <p>IDEA has the notion of modules and projects. A project can have multiple modules, and modules are separate and independent entities. Configuring a module's dependencies and structure is very simple, and is possible with only one file:
-<script src="https://gist.github.com/4344825.js"></script>
+<script src="https://gist.github.com/sldblog/3a939630e915abe7de0a.js"> </script>
 </p>
 
 <p>Do note that the directory is not hardwired into the file.</p>
