--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ categories:
   <ul class="posts">
   {% for post in site.posts %}
     {% if post.categories contains category %}
-      <li><span class="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{ post.url }}">{{ post.title }}</a><br/><span class="date">({{ post.date | date_to_string }})</span></li>
     {% endif %}
   {% endfor %}
   </ul>
